--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "express": "^4.18.2",
+    "ngx-socket-io": "^4.6.1",
+    "reconnecting-websocket": "^4.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
